--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <meta name="twitter:card" content="summary">
 <link rel="shortcut icon" href="../assets/img/favicon.png" type="image/x-icon">
 
+<noscript><style>body{opacity: 1 !important;}</style></noscript>
+
 <script type="text/javascript">
   (function(e,t){var n=e.amplitude||{_q:[],_iq:{}};var r=t.createElement("script")
     ;r.type="text/javascript"
@@ -52,17 +54,17 @@
 
 <script src="/build.js"></script>
 
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet"> 
-<link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@500;600&family=Titan+One&display=swap" rel="stylesheet" rel="preload"> 
 <script src="https://kit.fontawesome.com/bb341dd622.js" crossorigin="anonymous" SameSite="None"></script>
 
 <body data-type="home">
   <div id="container">
+
   <section class="hero">
     <div class="sectionInner">
       <div class="header">
         <h1 class="wordmark">Coupling</h1>
-        <img class="logo" src="/assets/img/logo.png">
+        <img class="logo" src="/assets/img/logo.svg">
       </div>
 
       <h2 class="title">Learn Your Loved One's Language</h2>
@@ -76,16 +78,199 @@
         <button class="submit" type="submit" data-subscribe-track>Get Early Access</button>
       </form>
     </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
   </section>
-</div>
 
+  <section class="language">
+    <div class="sectionInner">
+      <h3>Grow Closer Through Language</h3>
 
-  <section class="footerSection">
+      <img src="/assets/img/logo.svg">
+
+      <p>
+        There are many rewarding benefits of learning your partner's or friend's language
+      </p>
+
+      <ul class="bulletPoints">
+        <li>
+          <i class="far fa-heart"></i>
+          You grow closer together through understanding their language and culture
+        </li>
+        <li>
+          <i class="fas fa-hand-holding-heart"></i>
+          You connect more deeply to them, their family, and their friends
+        </li>
+        <li>
+          <i class="far fa-laugh-beam"></i>
+          You can create more inside memes and jokes together
+        </li>
+      </ul>
+    </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="product">
+    <div class="sectionInner">
+      <h3>Learn a Language Together With Coupling</h3>
+
+      <img src="/assets/img/logo.svg">
+
+      <p>
+        Coupling makes it easy for your partner to guide you in learning their language
+      </p>
+
+      <ul class="bulletPoints">
+        <li>
+          <i class="far fa-address-card"></i>
+          Collect flashcards from all over including your conversations
+        </li>
+        <li>
+          <i class="fas fa-brain"></i>
+          Retain every word with the proven spaced repetition flashcard system
+        </li>
+        <li>
+          <i class="far fa-comments"></i>
+          Ask for help with living comment threads on difficult flashcards
+        </li>
+        <li>
+          <i class="fas fa-video"></i>
+          Share personal TikTok-style language learning videos
+        </li>
+        <li>
+          <i class="fas fa-assistive-listening-systems"></i>
+          Play daily speaking and listening challenges together
+        </li>
+      </ul>
+    </div>
+
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="about">
+    <div class="sectionInner">
+      <h3>About Me</h3>
+
+      <img src="/assets/img/us.jpg">
+
+      <p>
+        I’m Kevin, a Vietnamese-American. My wife, Heidi, is from China. I’ve
+        been self-learning Cantonese and Mandarin for years using podcasts and
+        Anki.
+      </p>
+
+      <p>
+        I wanted to involve Heidi better in my learning process beyond me
+        just asking “how do you say this?”. I started building Coupling for myself
+        and after discovering many couples had similar experiences trying to
+        learn their partner's language.
+      </p>
+    </div>
+
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="subscribe">
+    <div class="sectionInner">
+      <h3>Try Coupling for Free!</h3>
+      <img src="/assets/img/logo.svg">
+      <form class="subscribe">
+        <input name="email" type="email" placeholder="Your email..." required>
+        <button class="submit" type="submit" data-subscribe-track>Get Notified</button>
+      </form>
+    </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="footer">
     <a href="https://twitter.com/learncoupling" target="_blank" rel="noopener" data-twitter-track>
       <i class="fab fa-twitter"></i>
     </a>
     <a href="https://facebook.com/learncoupling" target="_blank" rel="noopener" data-fb-track>
       <i class="fab fa-facebook"></i>
     </a>
+    <a href="https://instagram.com/learncoupling" target="_blank" rel="noopener" data-instagram-track>
+      <i class="fab fa-instagram"></i>
+    </a>
   </section>
+</div>
 </body>
