--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
 <script src="/build.js"></script>
 
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@500;600&family=Titan+One&display=swap" rel="stylesheet" rel="preload"> 
-<script src="https://kit.fontawesome.com/bb341dd622.js" crossorigin="anonymous" SameSite="None"></script>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@500;600&family=Titan+One&display=swap" rel="stylesheet" rel="preload">
+<link href="/assets/css/fontawesome.css" rel="stylesheet">
 
 <body data-type="home">
   <div id="container">
@@ -74,7 +74,7 @@
       <p class="subtitle">Fun and rewarding language learning for couples</p>
 
       <form class="subscribe">
-        <input name="email" type="email" placeholder="Your email..." required>
+        <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
         <button class="submit" type="submit" data-subscribe-track>Get Early Access</button>
       </form>
     </div>
@@ -97,31 +97,30 @@
 
   </section>
 
-  <section class="language">
+  <section class="about">
     <div class="sectionInner">
-      <h3>Grow Closer Through Language</h3>
+      <h3>The Story</h3>
 
-      <img src="/assets/img/logo.svg">
+      <img src="/assets/img/us.jpg">
 
       <p>
-        There are many rewarding benefits of learning your partner's or friend's language
+        I’m Kevin, and my wife is from China. I’ve been self-learning
+        Cantonese and Mandarin for years. It's funny I've been teaching myself
+        entirely on my own, while being married to a native speaker. I talked 
+        to a lot of bilingual couple friends and found it was a common
+        struggle learning each other's tongue.
       </p>
 
-      <ul class="bulletPoints">
-        <li>
-          <i class="far fa-heart"></i>
-          You grow closer together through understanding their language and culture
-        </li>
-        <li>
-          <i class="fas fa-hand-holding-heart"></i>
-          You connect more deeply to them, their family, and their friends
-        </li>
-        <li>
-          <i class="far fa-laugh-beam"></i>
-          You can create more inside memes and jokes together
-        </li>
-      </ul>
+      <p>
+        <b>Learning a language today is a lonely process</b>: tap on gamified apps,
+        listen to headless voices, talk to strangers online. It's hard to
+        learn a language without interacting with people. Many of us have a
+        native speaker around us all the time. Perhaps they're the reason why
+        we started learning. <b>I started Coupling to plug our loved ones into
+        our language journey and bring it life.</b>
+      </p>
     </div>
+
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
@@ -145,32 +144,40 @@
     <div class="sectionInner">
       <h3>Learn a Language Together With Coupling</h3>
 
-      <img src="/assets/img/logo.svg">
+      <p>Coupling makes it easy for your partner to guide you in learning their language</p>
 
-      <p>
-        Coupling makes it easy for your partner to guide you in learning their language
-      </p>
+      <div class="pourImage">
+        <img src="/assets/img/pour.png">
+      </div>
 
       <ul class="bulletPoints">
         <li>
-          <i class="far fa-address-card"></i>
-          Collect flashcards from all over including your conversations
+          <i class="fal fa-assistive-listening-systems"></i>
+          Play daily speaking and listening challenges together
         </li>
         <li>
-          <i class="fas fa-brain"></i>
+          <i class="fal fa-address-card"></i>
+          Collect flashcards every time you learn something from your partner 
+        </li>
+        <li>
+          <i class="fal fa-brain"></i>
           Retain every word with the proven spaced repetition flashcard system
         </li>
         <li>
-          <i class="far fa-comments"></i>
+          <i class="fal fa-rabbit-fast"></i>
+          Generate flashcards quickly with autofilled translation and audio 
+        </li>
+        <li>
+          <i class="fal fa-comments"></i>
           Ask for help with living comment threads on difficult flashcards
         </li>
         <li>
-          <i class="fas fa-video"></i>
-          Share personal TikTok-style language learning videos
+          <i class="fal fa-video"></i>
+          Watch personalized language teaching video stories created by your partner
         </li>
         <li>
-          <i class="fas fa-assistive-listening-systems"></i>
-          Play daily speaking and listening challenges together
+          <i class="fal fa-battery-full"></i>
+          Stay motivated as your partner keeps track of your stats and progress
         </li>
       </ul>
     </div>
@@ -194,26 +201,29 @@
 
   </section>
 
-  <section class="about">
+  <section class="language">
     <div class="sectionInner">
-      <h3>About Me</h3>
-
-      <img src="/assets/img/us.jpg">
+      <h3>Grow Closer Through Language</h3>
 
       <p>
-        I’m Kevin, a Vietnamese-American. My wife, Heidi, is from China. I’ve
-        been self-learning Cantonese and Mandarin for years using podcasts and
-        Anki.
+        There are many rewarding benefits of learning your partner's or friend's language
       </p>
 
-      <p>
-        I wanted to involve Heidi better in my learning process beyond me
-        just asking “how do you say this?”. I started building Coupling for myself
-        and after discovering many couples had similar experiences trying to
-        learn their partner's language.
-      </p>
+      <ul class="bulletPoints">
+        <li>
+          <i class="fal fa-heart"></i>
+          You grow closer together through understanding their language and culture
+        </li>
+        <li>
+          <i class="fal fa-hand-holding-heart"></i>
+          You connect more deeply to them, their family, and their friends
+        </li>
+        <li>
+          <i class="fal fa-laugh-beam"></i>
+          You can create more inside memes and jokes together
+        </li>
+      </ul>
     </div>
-
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
@@ -238,7 +248,7 @@
       <h3>Try Coupling for Free!</h3>
       <img src="/assets/img/logo.svg">
       <form class="subscribe">
-        <input name="email" type="email" placeholder="Your email..." required>
+        <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
         <button class="submit" type="submit" data-subscribe-track>Get Notified</button>
       </form>
     </div>
@@ -263,13 +273,13 @@
 
   <section class="footer">
     <a href="https://twitter.com/learncoupling" target="_blank" rel="noopener" data-twitter-track>
-      <i class="fab fa-twitter"></i>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
     </a>
     <a href="https://facebook.com/learncoupling" target="_blank" rel="noopener" data-fb-track>
-      <i class="fab fa-facebook"></i>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/></svg>
     </a>
     <a href="https://instagram.com/learncoupling" target="_blank" rel="noopener" data-instagram-track>
-      <i class="fab fa-instagram"></i>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
     </a>
   </section>
 </div>
