--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <section class="about">
     <div class="sectionInner">
-      <h3>The Story</h3>
+      <h3>A Language App That Works</h3>
 
       <img src="/assets/img/us.jpg">
 
