--- a/index.html
+++ b/index.html
@@ -104,23 +104,17 @@
       <img src="/assets/img/us.jpg">
 
       <p>
-        I’m Kevin, and my wife is from China. I’ve been self-learning
-        Cantonese and Mandarin for years. It's funny I've been teaching myself
-        entirely on my own, while being married to a native speaker. I talked 
-        to a lot of bilingual couple friends and found it was a common
-        struggle learning each other's tongue.
+        <b>Learning a language today is a lonely process</b>: tap on gamified
+        apps, listen to headless voices, read textbooks, talk to strangers
+        online. It's hard to learn a language without interacting with people.
       </p>
 
       <p>
-        <b>Learning a language today is a lonely process</b>: tap on gamified apps,
-        listen to headless voices, talk to strangers online. It's hard to
-        learn a language without interacting with people. Many of us have a
-        native speaker around us all the time. Perhaps they're the reason why
-        we started learning. <b>I started Coupling to plug our loved ones into
-        our language journey and bring it life.</b>
+        Many of us have a native speaker around us all the time. Perhaps
+        they're the reason we started learning. <b>I started Coupling to
+        plug our loved ones into our language journey and bring it life.</b>
       </p>
     </div>
-
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
@@ -140,48 +134,76 @@
 
   </section>
 
-  <section class="product">
+  <section class="flashcard">
     <div class="sectionInner">
-      <h3>Learn a Language Together With Coupling</h3>
-
-      <p>Coupling makes it easy for your partner to guide you in learning their language</p>
+      <h3>Retain Every Word with Spaced Repetition Flashcards</h3>
 
       <div class="pourImage">
         <img src="/assets/img/pour.png">
       </div>
 
+      <p>
+        Lock words into memory with <a href="https://wikipedia.org/wiki/Spaced_repetition" target="_blank" rel="noopener">spaced repetition</a>, the system used by medical students to memorize tens of thousands of terms
+      </p>
+
       <ul class="bulletPoints">
         <li>
-          <i class="fal fa-assistive-listening-systems"></i>
-          Play daily speaking and listening challenges together
-        </li>
-        <li>
           <i class="fal fa-address-card"></i>
-          Collect flashcards every time you learn something from your partner 
+          Generate flashcards every time you learn something from your partner 
         </li>
         <li>
-          <i class="fal fa-brain"></i>
-          Retain every word with the proven spaced repetition flashcard system
+          <i class="fal fa-bullseye-arrow"></i>
+          Hunt down tricky words and phrases you are struggling with 
         </li>
         <li>
-          <i class="fal fa-rabbit-fast"></i>
-          Generate flashcards quickly with autofilled translation and audio 
-        </li>
-        <li>
-          <i class="fal fa-comments"></i>
-          Ask for help with living comment threads on difficult flashcards
-        </li>
-        <li>
-          <i class="fal fa-video"></i>
-          Watch personalized language teaching video stories created by your partner
-        </li>
-        <li>
-          <i class="fal fa-battery-full"></i>
-          Stay motivated as your partner keeps track of your stats and progress
+          <i class="fal fa-map-marker-question"></i>
+          Get help in living comment threads on troublesome flashcards
         </li>
       </ul>
     </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
 
+  </section>
+
+  <section class="coach">
+    <div class="sectionInner">
+      <h3>Your Partner As Your Coach</h3>
+
+      <p>
+        Coupling makes it easy for your partner to guide you without having to
+        turn into a full-time language teacher
+      </p>
+
+      <ul class="bulletPoints">
+        <li>
+          <i class="fal fa-comments"></i>
+          Play daily speaking and listening challenges together
+        </li>
+        <li>
+          <i class="fal fa-video"></i>
+          Watch short personalized language videos created by your partner
+        </li>
+        <li>
+          <i class="fal fa-battery-full"></i>
+          Stay motivated as your partner keeps track of your progress
+        </li>
+      </ul>
+    </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
 <path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
@@ -205,22 +227,20 @@
     <div class="sectionInner">
       <h3>Grow Closer Through Language</h3>
 
-      <p>
-        There are many rewarding benefits of learning your partner's or friend's language
-      </p>
+      <p>There are many awesome things about learning a loved one's language</p>
 
       <ul class="bulletPoints">
         <li>
           <i class="fal fa-heart"></i>
-          You grow closer together through understanding their language and culture
+          Grow closer together through understanding their language and culture
         </li>
         <li>
           <i class="fal fa-hand-holding-heart"></i>
-          You connect more deeply to them, their family, and their friends
+          Connect more deeply to them, their family, and their friends
         </li>
         <li>
           <i class="fal fa-laugh-beam"></i>
-          You can create more inside memes and jokes together
+          Create more inside memes and jokes together
         </li>
       </ul>
     </div>
