--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   </section>
 
-  <section class="about">
+  <section class="problem">
     <div class="sectionInner">
       <h3>A Language App That Works</h3>
 
@@ -275,6 +275,53 @@
         <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
         <button class="submit" type="submit" data-subscribe-track>Get Notified</button>
       </form>
+    </div>
+    <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g filter="url(#filter_d)">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M0 34.8471L12.5644 28.8733C25.1289 22.8995 50.2577 11.9476 75.3866 24.8908C99.549 38.8296 124.678 76.6636 149.807 80.6461C174.936 84.6287 200.064 53.7641 225.193 49.7816C250.322 45.799 275.451 69.6942 299.613 71.6855C324.742 72.6811 349.871 53.7641 362.436 43.8078L375 34.8471V0H362.436C349.871 0 324.742 0 299.613 0C275.451 0 250.322 0 225.193 0C200.064 0 174.936 0 149.807 0C124.678 0 99.549 0 75.3866 0C50.2577 0 25.1289 0 12.5644 0H0V34.8471Z" fill="red"/>
+</g>
+<defs>
+<filter id="filter_d" x="-4" y="0" width="383" height="89" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+<feFlood flood-opacity="0" result="BackgroundImageFix"/>
+<feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+<feOffset dy="4"/>
+<feGaussianBlur stdDeviation="2"/>
+<feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+<feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+<feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+</filter>
+</defs>
+</svg>
+
+  </section>
+
+  <section class="about">
+    <div class="sectionInner">
+      <h3>About Me</h3>
+
+      <img src="/assets/img/me.jpg">
+
+      <p>
+        Hey! I’m <a href="https://twitter.com/andgokevin" target="_blank" rel="noopener">Kevin</a>, and my
+        wife Heidi is from China. I’ve been self-learning Cantonese and
+        Mandarin for years. I also speak Vietnamese and some Spanish. I
+        started Coupling to help myself and other couples who have tried to
+        learn each other's languages. Eventually, I hope this brings the world
+        a little bit closer in understanding each other.
+      </p>
+
+      <p>
+        I'm a developer and designer. Before I led the <a
+        href="https://aframe.io">A-Frame community</a>, teaching tens of
+        thousands of people to build 3D worlds. In 2018, I founded <a href="https://supermedium.com" target="_blank" rel="noopener">a VR
+        startup</a> that went through <a href="https://www.ycombinator.com" target="_blank" rel="noopener">Y Combinator</a> and raised $1.2M. I took a
+        giant leap to tackle language learning. Now I am working 24/7 on
+        Coupling and am funding it out of my own pocket.
+      </p>
+
+      <p>
+        Contact me at <a href="mailto: kevin@learncoupling.com">kevin@learncoupling.com</a> 
+      </p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
