--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <h3>Retain Every Word with Spaced Repetition Flashcards</h3>
 
       <div class="sectionInnerColumns">
-        <img src="/assets/img/library.png">
+        <img src="/assets/img/Library.png">
 
         <div>
           <p>
@@ -195,7 +195,7 @@
       <h3>Your Partner As Your Coach</h3>
 
       <div class="sectionInnerColumns reverse">
-        <img src="/assets/img/challenges.png">
+        <img src="/assets/img/Challenges.png">
 
         <div>
           <p>
