--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <h3>Retain Every Word with Spaced Repetition Flashcards</h3>
 
       <div class="sectionInnerColumns">
-        <img src="/assets/img/Library.png">
+        <img src="/assets/img/library.png">
 
         <div>
           <p>
@@ -195,7 +195,7 @@
       <h3>Your Partner As Your Coach</h3>
 
       <div class="sectionInnerColumns reverse">
-        <img src="/assets/img/Challenges.png">
+        <img src="/assets/img/challenges.png">
 
         <div>
           <p>
@@ -256,7 +256,7 @@
         </li>
         <li>
           <i class="fal fa-laugh-beam"></i>
-          Create more inside memes and jokes together
+          Create inside memes and jokes together
         </li>
       </ul>
     </div>
