--- a/index.html
+++ b/index.html
@@ -237,22 +237,28 @@
     <div class="sectionInner">
       <h3>Grow Closer Through Language</h3>
 
-      <p>There are many awesome things about learning a loved one's language</p>
+      <div class="sectionInnerColumns">
+        <img src="/assets/img/messenger.png">
 
-      <ul class="bulletPoints">
-        <li>
-          <i class="fal fa-heart"></i>
-          Grow closer together through understanding their language and culture
-        </li>
-        <li>
-          <i class="fal fa-hand-holding-heart"></i>
-          Connect more deeply to them, their family, and their friends
-        </li>
-        <li>
-          <i class="fal fa-laugh-beam"></i>
-          Create inside memes and jokes together
-        </li>
-      </ul>
+        <div>
+          <p>There are many awesome things about learning a loved one's language</p>
+
+          <ul class="bulletPoints">
+            <li>
+              <i class="fal fa-heart"></i>
+              Grow closer together through understanding their language and culture
+            </li>
+            <li>
+              <i class="fal fa-hand-holding-heart"></i>
+              Connect more deeply to them, their family, and their friends
+            </li>
+            <li>
+              <i class="fal fa-laugh-beam"></i>
+              Create inside memes and jokes together
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
