--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 
 <body data-type="home">
   <div id="container">
-
   <section class="hero">
     <div class="sectionInner">
       <div class="heroLeft">
@@ -117,6 +116,8 @@
           </p>
         </div>
       </div>
+
+      <p><b><a href="https://coupling.substack.com/p/introducing-coupling" target="_blank" rel="noopener">Read more about Coupling&hellip;</a></b></p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
@@ -281,7 +282,7 @@
 
   <section class="subscribe">
     <div class="sectionInner">
-      <h3>Try Coupling for Free!</h3>
+      <h3>Try Coupling for Free to Learn Any Lanugage</h3>
 
       <div class="sectionInnerColumns">
         <div class="pourImage">
@@ -293,6 +294,8 @@
           <button class="submit" type="submit" data-subscribe-track>Get Notified</button>
         </form>
       </div>
+
+      <p>And read updates on our <b><a href="https://coupling.substack.com" target="_blank" rel="noopener">blog</a></b>!</p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
