--- a/challenge/index.html
+++ b/challenge/index.html
@@ -49,8 +49,7 @@
   });
 </script>
 
-
-<link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/index.css?v=2">
 
 <body data-type="challenge">
   <div id="container">
