--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
   });
 </script>
 
-
-<link rel="stylesheet" href="/css/index.css">
+<link rel="stylesheet" href="/css/index.css?v=2">
 
 <body data-type="home">
   <div id="container">
@@ -79,7 +78,7 @@
         </a>
       </div>
 
-      <img class="hero heroImgDesktop" src="/assets/img/phones.png">
+      <img class="hero heroImgDesktop" src="/assets/img/phones.png?v=2">
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
 <g filter="url(#filter_d)">
@@ -245,7 +244,7 @@
       <h3>Grow Closer Through Language</h3>
 
       <div class="sectionInnerColumns">
-        <img src="/assets/img/messenger.png">
+        <img src="/assets/img/messenger.png?v=2">
         <div>
           <p>There are many awesome things about learning a loved one's language</p>
 
