--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<title>Coupling | Learn Your Loved One's Language</title>
-
-<meta name="title" content="Coupling | Learn Your Loved One's Language">
-<meta name="og:title" content="Coupling | Learn Your Loved One's Language">
-<meta name="twitter:title" content="Coupling | Learn Your Loved One's Language">
+<title>Coupling | Coupling</title>
+<meta name="title" content="Coupling | Coupling">
+<meta name="og:title" content="Coupling | Coupling">
+<meta name="twitter:title" content="Coupling | Coupling">
 <meta name="description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
 <meta name="og:description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
 <meta name="twitter:description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
