--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,7 +1,7 @@
-<title>Coupling | Daily Language Challenge</title>
-<meta name="title" content="Coupling | Daily Language Challenge">
-<meta name="og:title" content="Coupling | Daily Language Challenge">
-<meta name="twitter:title" content="Coupling | Daily Language Challenge">
+<title>Coupling | Weekly Language Challenge</title>
+<meta name="title" content="Coupling | Weekly Language Challenge">
+<meta name="og:title" content="Coupling | Weekly Language Challenge">
+<meta name="twitter:title" content="Coupling | Weekly Language Challenge">
 <meta name="description" content="Hide and Seek">
 <meta name="og:description" content="Hide and Seek">
 <meta name="twitter:description" content="Hide and Seek">
@@ -61,7 +61,7 @@
 
       <img class="pageImage" src="/assets/img/hands.png">
 
-      <h1 class="pageTitle" data-text="Daily Language Challenge">Daily Language Challenge</h1>
+      <h1 class="pageTitle" data-text="Weekly Language Challenge">Weekly Language Challenge</h1>
       <h2 class="challengeName">Hide and Seek</h2>
 
       <div class="content">
@@ -172,7 +172,7 @@ and listening!</p>
 
         <div>
           <p>
-            These daily challenges are a starting point to try things out I build
+            These weekly challenges are a starting point to try things out I build
             the app. Flashcards, translations, and audio samples are coming soon
           </p>
 
