--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<title>Coupling | Coupling</title>
-<meta name="title" content="Coupling | Coupling">
-<meta name="og:title" content="Coupling | Coupling">
-<meta name="twitter:title" content="Coupling | Coupling">
+<title>Coupling | Learn Your Loved One's Language</title>
+<meta name="title" content="Coupling | Learn Your Loved One's Language">
+<meta name="og:title" content="Coupling | Learn Your Loved One's Language">
+<meta name="twitter:title" content="Coupling | Learn Your Loved One's Language">
 <meta name="description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
 <meta name="og:description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
 <meta name="twitter:description" content="A fun and rewarding language learning app for couples. Plug your partner into your language journey and bring it life.">
@@ -73,7 +73,7 @@
 
         <a class="button challenge" href="challenge">
           <i class="fal fa-trophy"></i>
-          Play Today's Daily Language Challenge
+          Play Today's Weekly Language Challenge
         </a>
       </div>
 
@@ -156,11 +156,11 @@
           <ul class="bulletPoints">
             <li>
               <i class="fal fa-address-card"></i>
-              Generate new flashcards from conversations and challenges 
+              Generate new flashcards from conversations and challenges
             </li>
             <li>
               <i class="fal fa-bullseye-arrow"></i>
-              Hunt down tricky words and phrases you are struggling with 
+              Hunt down tricky words and phrases you are struggling with
             </li>
             <li>
               <i class="fal fa-battery-full"></i>
@@ -209,7 +209,7 @@
             </li>
             <li>
               <i class="fal fa-video"></i>
-              Watch mini language lesson videos created by your partner 
+              Watch mini language lesson videos created by your partner
             </li>
             <li>
               <i class="fal fa-map-marker-question"></i>
@@ -345,7 +345,7 @@
       </p>
 
       <p style="text-align: center">
-        Contact me at <a href="mailto: kevin@learncoupling.com">kevin@learncoupling.com</a> 
+        Contact me at <a href="mailto: kevin@learncoupling.com">kevin@learncoupling.com</a>
       </p>
     </div>
     <svg class="wave" width="375" height="89" viewBox="0 0 375 89" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -379,6 +379,7 @@
     </a>
   </section>
 </div>
+
 
   <script src="/build.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@500;600&family=Titan+One&display=swap" rel="stylesheet">
