--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <p class="subtitle">Fun and rewarding language learning for couples</p>
 
-        <form class="subscribe">
+        <form class="subscribeForm">
           <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
           <button class="submit" type="submit" data-subscribe-track>Get Early Access</button>
         </form>
@@ -292,7 +292,7 @@
           <img src="/assets/img/pour.png">
         </div>
 
-        <form class="subscribe">
+        <form class="subscribeForm">
           <input class="fal" name="email" type="email" placeholder="&#xf0e0  Your email..." required>
           <button class="submit" type="submit" data-subscribe-track>Get Notified</button>
         </form>
