--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <a class="button challenge" href="challenge">
           <i class="fal fa-trophy"></i>
-          Play Today's Weekly Language Challenge
+          This Week's Language Challenge
         </a>
       </div>
 
