--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <button class="submit" type="submit" data-subscribe-track>Get Early Access</button>
         </form>
 
-        <a class="button challenge" href="challenge">
-          <i class="fal fa-trophy"></i>
-          This Week's Language Challenge
+        <a class="button challenge" href="https://coupling.substack.com/p/weekly-update-on-coupling-49b" target="_blank" rel="noopener">
+          <i class="fal fa-newspaper"></i>
+          Read This Week's Development Update 
         </a>
       </div>
 
