--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <button class="submit" type="submit" data-subscribe-track>Get Early Access</button>
         </form>
 
-        <a class="button challenge" href="https://coupling.substack.com/p/weekly-update-on-coupling-756" target="_blank" rel="noopener">
+        <a class="button challenge" href="https://coupling.substack.com/p/update3" target="_blank" rel="noopener">
           <i class="fal fa-newspaper"></i>
           Read This Week's Development Update 
         </a>
@@ -342,7 +342,7 @@
 </defs>
 </svg>
 
-          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/weekly-update-on-coupling-756" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F34ffdbcb-0501-4589-9fb0-82094ce144cd_1000x500.gif)">
+          <a class="blogImage" data-blog-track href="https://coupling.substack.com/p/update3" target="_blank" rel="noopener" style="background-image: url(https://cdn.substack.com/image/fetch/w_1456,c_limit,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fbucketeer-e05bbc84-baa3-437e-9518-adb32be77984.s3.amazonaws.com%2Fpublic%2Fimages%2F34ffdbcb-0501-4589-9fb0-82094ce144cd_1000x500.gif)">
             <div class="blogOverlay">
               <h3 class="blogTitle">Weekly Update on Coupling</h3>
               <p class="blogSubtitle">Automatic language translations, transliterations, and breakdowns</p>
