--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <a class="button challenge" href="https://coupling.substack.com/p/update6" target="_blank" rel="noopener">
           <i class="fal fa-newspaper"></i>
-          Read This Week's Development Update 
+          Coupling is Available Now!
         </a>
       </div>
 
